Java17 og TaskV3 del 1 av 2 (#3197)
* Java17 og TaskV3 del 1 av 2

* Fjerne rester av lokal tilpasning

* Kutt maven-compile sin release 17

* Overflødig maven-compiler

* Resten av taskmigrering

* Flere dependabots

* Skjul interaksjon med instance proxies