@@ -1,10 +1,10 @@
 package no.nav.foreldrepenger.domene.vedtak.es;
 
-import static no.nav.foreldrepenger.domene.vedtak.OpprettProsessTaskIverksett.VEDTAK_TIL_DATAVAREHUS_TASK;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.Optional;
@@ -12,12 +12,17 @@ import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import no.nav.foreldrepenger.behandlingslager.behandling.Behandling;
 import no.nav.foreldrepenger.behandlingslager.behandling.anke.AnkeRepository;
 import no.nav.foreldrepenger.behandlingslager.behandling.klage.KlageRepository;
 import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingRepository;
 import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.ScenarioMorSøkerEngangsstønad;
+import no.nav.foreldrepenger.datavarehus.task.VedtakTilDatavarehusTask;
 import no.nav.foreldrepenger.dbstoette.EntityManagerAwareTest;
 import no.nav.foreldrepenger.domene.vedtak.OpprettProsessTaskIverksett;
 import no.nav.foreldrepenger.domene.vedtak.intern.AvsluttBehandlingTask;
@@ -27,13 +32,15 @@ import no.nav.foreldrepenger.historikk.OppgaveÅrsak;
 import no.nav.foreldrepenger.produksjonsstyring.oppgavebehandling.OppgaveTjeneste;
 import no.nav.foreldrepenger.produksjonsstyring.oppgavebehandling.task.AvsluttOppgaveTask;
 import no.nav.vedtak.felles.prosesstask.api.ProsessTaskData;
-import no.nav.vedtak.felles.prosesstask.api.ProsessTaskRepository;
-import no.nav.vedtak.felles.prosesstask.api.ProsessTaskStatus;
-import no.nav.vedtak.felles.prosesstask.impl.ProsessTaskRepositoryImpl;
+import no.nav.vedtak.felles.prosesstask.api.ProsessTaskGruppe;
+import no.nav.vedtak.felles.prosesstask.api.ProsessTaskTjeneste;
+import no.nav.vedtak.felles.prosesstask.api.TaskType;
 
+@ExtendWith(MockitoExtension.class)
 public class OpprettProsessTaskIverksettTest extends EntityManagerAwareTest {
 
-    private ProsessTaskRepository prosessTaskRepository;
+    @Mock
+    private ProsessTaskTjeneste taskTjeneste;
 
     private OppgaveTjeneste oppgaveTjeneste;
 
@@ -42,10 +49,9 @@ public class OpprettProsessTaskIverksettTest extends EntityManagerAwareTest {
     @BeforeEach
     void setUp() {
         var entityManager = getEntityManager();
-        prosessTaskRepository = new ProsessTaskRepositoryImpl(entityManager, null, null);
         var behandlingRepository = new BehandlingRepository(entityManager);
         oppgaveTjeneste = mock(OppgaveTjeneste.class);
-        opprettProsessTaskIverksett = new OpprettProsessTaskIverksett(prosessTaskRepository, behandlingRepository,
+        opprettProsessTaskIverksett = new OpprettProsessTaskIverksett(taskTjeneste, behandlingRepository,
             new AnkeRepository(entityManager), new KlageRepository(entityManager), oppgaveTjeneste);
     }
 
@@ -58,10 +64,12 @@ public class OpprettProsessTaskIverksettTest extends EntityManagerAwareTest {
         opprettProsessTaskIverksett.opprettIverksettingTasks(opprettBehandling());
 
         // Assert
-        var prosessTaskDataList = prosessTaskRepository.finnAlle(ProsessTaskStatus.KLAR);
-        var tasktyper = prosessTaskDataList.stream().map(ProsessTaskData::getTaskType).collect(Collectors.toList());
-        assertThat(tasktyper).contains(AvsluttBehandlingTask.TASKTYPE, SendVedtaksbrevTask.TASKTYPE,
-            VurderOgSendØkonomiOppdragTask.TASKTYPE, VEDTAK_TIL_DATAVAREHUS_TASK);
+        var captor = ArgumentCaptor.forClass(ProsessTaskGruppe.class);
+        verify(taskTjeneste).lagre(captor.capture());
+        var prosessTaskDataList = captor.getValue().getTasks().stream().map(ProsessTaskGruppe.Entry::task).toList();
+        var tasktyper = prosessTaskDataList.stream().map(ProsessTaskData::taskType).collect(Collectors.toList());
+        assertThat(tasktyper).contains(TaskType.forProsessTask(AvsluttBehandlingTask.class), TaskType.forProsessTask(SendVedtaksbrevTask.class),
+            TaskType.forProsessTask(VurderOgSendØkonomiOppdragTask.class), TaskType.forProsessTask(VedtakTilDatavarehusTask.class));
     }
 
     @Test
@@ -74,11 +82,12 @@ public class OpprettProsessTaskIverksettTest extends EntityManagerAwareTest {
         opprettProsessTaskIverksett.opprettIverksettingTasks(behandling);
 
         // Assert
-        var prosessTaskDataList = prosessTaskRepository.finnAlle(ProsessTaskStatus.KLAR);
-        var tasktyper = prosessTaskDataList.stream().map(ProsessTaskData::getTaskType).collect(Collectors.toList());
-        assertThat(tasktyper).contains(AvsluttBehandlingTask.TASKTYPE, SendVedtaksbrevTask.TASKTYPE,
-            AvsluttOppgaveTask.TASKTYPE, VurderOgSendØkonomiOppdragTask.TASKTYPE,
-            VEDTAK_TIL_DATAVAREHUS_TASK);
+        var captor = ArgumentCaptor.forClass(ProsessTaskGruppe.class);
+        verify(taskTjeneste).lagre(captor.capture());
+        var prosessTaskDataList = captor.getValue().getTasks().stream().map(ProsessTaskGruppe.Entry::task).toList();
+        var tasktyper = prosessTaskDataList.stream().map(ProsessTaskData::taskType).collect(Collectors.toList());
+        assertThat(tasktyper).contains(TaskType.forProsessTask(AvsluttBehandlingTask.class), TaskType.forProsessTask(SendVedtaksbrevTask.class),
+            TaskType.forProsessTask(AvsluttOppgaveTask.class), TaskType.forProsessTask(VurderOgSendØkonomiOppdragTask.class), TaskType.forProsessTask(VedtakTilDatavarehusTask.class));
     }
 
     private Behandling opprettBehandling() {
@@ -87,9 +96,9 @@ public class OpprettProsessTaskIverksettTest extends EntityManagerAwareTest {
     }
 
     private void mockOpprettTaskAvsluttOppgave(Behandling behandling) {
-        var prosessTaskData = new ProsessTaskData(AvsluttOppgaveTask.TASKTYPE);
+        var prosessTaskData = ProsessTaskData.forProsessTask(AvsluttOppgaveTask.class);
         prosessTaskData.setBehandling(behandling.getFagsakId(), behandling.getId(), behandling.getAktørId().getId());
-        prosessTaskData.setOppgaveId("1001");
+        OppgaveTjeneste.setOppgaveId(prosessTaskData, "1001");
         when(oppgaveTjeneste.opprettTaskAvsluttOppgave(any(Behandling.class), any(OppgaveÅrsak.class), anyBoolean())).thenReturn(Optional.of(prosessTaskData));
     }
 }
